--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <%= link_to "Courses", welcome_courses_path %>
     <%= link_to "News", welcome_news_path %>
     <%= link_to "About Us", welcome_about_path %>
-    <%= link_to "Upload", welcome_workers_path %>
+    <%= link_to "Upload", workers_path %>
     <%= yield %>
   </body>
 </html>
